--- a/style/common/header.css
+++ b/style/common/header.css
@@ -6,7 +6,9 @@
   left: 0;
   right: 0;
   z-index: 10;
-  background-color: var(--primary-color);
+  background-color: var(--primary);
+  color: var(--text) !important;
+  transition: background-color 0.3s;
 }
 
 .header-container {
@@ -40,7 +42,7 @@
 }
 
 #header .user div{
-  background-color: rgb(116, 116, 116);
+  background-color: var(--bg1);
   width: 48px;
   height: 48px;
   border-radius: 50%;
@@ -62,12 +64,12 @@
 
 #header .tooltip {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: rgb(255, 255, 255);
+  background-color: var(--bg3);
+  color: var(--text);
   font-size: 13px;
   padding: 9px 14px;
   border-radius: 5px;
-  font-weight: bold;
+  font-weight: 500;
   bottom: -50px;
   transition: opacity 0.5s;
   opacity: 0;
