--- a/style/add-task/add-task.css
+++ b/style/add-task/add-task.css
@@ -22,7 +22,7 @@
 .date-time, .name, .description {
   width: 100%;
   position: relative;
-  border: 2px solid var(--secondary-color);
+  border: 2px solid var(--secondary);
   padding: 16px 10px;
   border-radius: 10px;
 }
@@ -33,7 +33,7 @@
   border: 0;
   background-color: transparent;
   font-size: 16px;
-  color: var(--text-color);
+  color: var(--text);
   resize: none;
   letter-spacing: 0.03em;
 }
@@ -47,10 +47,10 @@ input::placeholder, textarea::placeholder{
   z-index: 1;
   top: -8px;
   left: 4px;
-  background-color: var(--primary-color);
+  background-color: var(--primary);
   padding: 0 5px;
   font-size: 13px;
-  color: var(--secondary-color);
+  color: var(--secondary);
 }
 
 span.nm-count, span.des-count {
@@ -82,7 +82,7 @@ span.nm-count, span.des-count {
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 600;
-  color: var(--secondary-color);
+  color: var(--secondary);
   width: 200px;
   margin: 0 auto;
   margin-top: 30px;
@@ -102,8 +102,8 @@ span.nm-count, span.des-count {
 
 #create-btn {
   border: 0;
-  color: var(--text-color);
-  background-color: var(--secondary-color);
+  color: var(--text);
+  background-color: var(--secondary);
   font-size: 24px;
   letter-spacing: 0.03em;
   line-height: 1.75;
