--- a/style/categories/categories.css
+++ b/style/categories/categories.css
@@ -13,7 +13,7 @@
   display: none; /*flex*/
   flex-direction: row;
   flex-wrap: wrap;
-  background-color: rgba(16, 23, 39, 0.1);
+  background-color: var(--text-min1);
   border-radius: 18px 0 0 18px;
   padding: 25px 20px;
   max-height: 350px;
@@ -73,7 +73,7 @@
 }
 
 .edit {
-  color: var(--secondary-color);
+  color: var(--secondary);
   margin-right: 10px;
 }
 
@@ -109,14 +109,14 @@
 }
 
 .new-ctgry h2 {
-  color: var(--text-color);
+  color: var(--text);
   margin-bottom: 30px;
 }
 
 .new-ctgry .category-name {
   width: 100%;
   position: relative;
-  border: 2px solid var(--secondary-color);
+  border: 2px solid var(--secondary);
   padding: 16px 10px;
   border-radius: 10px;
 }
@@ -127,7 +127,7 @@
   border: 0;
   background-color: transparent;
   font-size: 16px;
-  color: var(--text-color);
+  color: var(--text);
   resize: none;
   letter-spacing: 0.03em;
 }
@@ -141,10 +141,10 @@
   z-index: 1;
   top: -8px;
   left: 4px;
-  background-color: var(--primary-color);
+  background-color: var(--primary);
   padding: 0 5px;
   font-size: 13px;
-  color: var(--secondary-color);
+  color: var(--secondary);
 }
 
 span.nm-count{
@@ -158,8 +158,8 @@ span.nm-count{
 
 #create-btn {
   border: 0;
-  color: var(--text-color);
-  background-color: var(--secondary-color);
+  color: var(--text);
+  background-color: var(--secondary);
   font-size: 24px;
   letter-spacing: 0.03em;
   line-height: 1.75;
@@ -184,8 +184,8 @@ span.nm-count{
 }
 
 .delete-confirm {
-  background-color: rgb(255, 255, 255);
-  color: rgba(0, 0, 0, 0.87);
+  background-color: var(--bg);
+  color: var(--text);
   box-shadow: rgba(0, 0, 0, 0.2) 0px 11px 15px -7px, rgba(0, 0, 0, 0.14) 0px 24px 38px 3px, rgba(0, 0, 0, 0.12) 0px 9px 46px 8px;
   position: fixed;
   top: 50%;
@@ -234,7 +234,7 @@ span.nm-count{
 }
 
 .delete-confirm #cncl-btn {
-  color: var(--secondary-color);
+  color: var(--secondary);
 }
 
 .delete-confirm #dlt-btn {
