--- a/style/common/sidebar.css
+++ b/style/common/sidebar.css
@@ -1,7 +1,7 @@
 #sidebar {
   width: 370px;
   height: 100%;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--bg);
   border-radius: 24px 0 0;
   position: fixed;
   z-index: 999;
@@ -36,10 +36,11 @@
   display: flex;
   justify-content: center;
   margin-top: -25px;
+  color: var(--text);
 }
 
 #sidebar .app-name span {
-  color: var(--secondary-color);
+  color: var(--secondary);
   margin-right: 5px;
 }
 
@@ -53,7 +54,8 @@
 
 #sidebar li {
   list-style: none;
-  color: var(--text-color);
+  color: var(--text);
+  font-weight: 500;
   padding: 18px 12px;
   border-radius: 15px;
   display: flex;
@@ -62,7 +64,7 @@
 }
 
 #sidebar li:hover {
-  background-color: rgba(0, 0, 0, 0.04);
+  background-color: var(--hover);
 }
 
 #sidebar li span.nm {
@@ -75,6 +77,7 @@
   width: 27px;
   margin-right: 15px;
   margin-left: -3px;
+  fill: var(--text);
 }
 
 #sidebar li i {
@@ -93,7 +96,7 @@
 
 #sidebar .task-count {
   background-color: var(--secondary-min2);
-  color: var(--secondary-color);
+  color: var(--secondary);
   font-weight: 600;
   font-size: 13px;
   height: 23px;
@@ -106,7 +109,7 @@
 
 .sidebar-tooltip {
   background-color: #f0f0f0;
-  color: var(--text-color);
+  color: var(--text);
   font-weight: 400;
   letter-spacing: normal;
   font-size: 12px;
@@ -163,8 +166,12 @@
 }
 
 .sidebar-user {
-  background-color: #ddd;
+  background-color: var(--bg3);
   margin: 5px 0;
+}
+
+.sidebar-user:hover {
+  background-color: var(--bg3-min7) !important;
 }
 
 .sidebar-user div{
@@ -185,7 +192,7 @@
 }
 
 .sidebar-break {
-  border-top: 1px solid rgb(224,224,224);
+  border-top: 1px solid var(--input-brdr);
 }
 
 #sidebar .creator {
