--- a/style/home/edit-task.css
+++ b/style/home/edit-task.css
@@ -4,8 +4,8 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgb(255, 255, 255);
-  color: rgba(0, 0, 0, 0.87);
+  background-color: var(--bg);
+  color: var(--text);
   max-height: 90%;
   border-radius: 20px;
   padding: 12px;
@@ -76,7 +76,7 @@
   border: 0;
   background-color: transparent;
   font-size: 16px;
-  color: var(--text-color);
+  color: var(--text);
   resize: none;
   letter-spacing: 0.03em;
 }
@@ -86,10 +86,10 @@
   z-index: 1;
   top: -8px;
   left: 4px;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--bg);
   padding: 0 5px;
   font-size: 13px;
-  color: rgba(0, 0, 0, 0.6);
+  color: var(--text-min6);
   font-weight: 400;
 }
 
@@ -152,7 +152,7 @@ span.nm-count, span.des-count {
 }
 
 #cancel-btn {
-  color: var(--secondary-color);
+  color: var(--secondary);
   cursor: pointer;
 }
 
@@ -165,7 +165,7 @@ span.nm-count, span.des-count {
 }
 
 #save-btn.enable {
-  color: var(--secondary-color);
+  color: var(--secondary);
   cursor: pointer;
 }
 
@@ -180,12 +180,12 @@ span.nm-count, span.des-count {
 
 
 .edit-task .form::-webkit-scrollbar-thumb {
-  background-color: #ddd;
+  background-color: #ddd !important;
   border-radius: 10px;
 }
 
 .edit-task .form::-webkit-scrollbar-thumb:hover {
-  background-color: #dcd6d6;
+  background-color: #dcd6d6 !important;
 }
 
 @media only screen and (max-width: 500px) {
