--- a/style/profile/cngProfile.css
+++ b/style/profile/cngProfile.css
@@ -56,7 +56,7 @@
 .cng-profile .name svg {
   margin-right: 8px;
   width: 25px;
-  fill: rgba(0, 0, 0, 0.6);
+  fill: var(--text-min6);
 }
 
 .cng-profile input {
@@ -65,7 +65,7 @@
   border: 0;
   background-color: transparent;
   font-size: 16px;
-  color: var(--text-color);
+  color: var(--text);
   resize: none;
   letter-spacing: 0.03em;
 }
@@ -83,7 +83,7 @@
   background-color: rgb(255, 255, 255);
   padding: 0 5px;
   font-size: 13px;
-  color: rgba(0, 0, 0, 0.6);
+  color: var(--text-min6);
   font-weight: 400;
 }
 
@@ -117,7 +117,7 @@
 }
 
 .cng-profile #cancel-btn {
-  color: var(--secondary-color);
+  color: var(--secondary);
   cursor: pointer;
 }
 
@@ -130,7 +130,7 @@
 }
 
 .cng-profile #save-btn.enable {
-  color: var(--secondary-color);
+  color: var(--secondary);
   cursor: pointer;
 }
 
