--- a/style/profile/profile.css
+++ b/style/profile/profile.css
@@ -10,19 +10,19 @@
   max-width: 404px;
   padding: 64px 48px;
   border-radius: 48px;
-  background: rgb(245, 245, 245);
-  border: 4px solid var(--secondary-color);
+  background: var(--bg);
+  border: 4px solid var(--secondary);
   box-shadow: var(--secondary-min8) 0px 0px 72px -1px;
   display: flex;
   row-gap: 16px;
   align-items: center;
   flex-direction: column;
-  transition: border 0.3s ease 0s, box-shadow 0.3s ease 0s;
+  transition: border 0.3s ease 0s, box-shadow 0.3s ease 0s, background 0.3s ease;
 }
 
 .cart .profile {
   position: relative;
-  background: rgb(140, 145, 156);
+  background: var(--bg1);
   width: 96px;
   height: 96px;
   border-radius: 50%;
@@ -31,6 +31,7 @@
   justify-content: center;
   color: #ffffff;
   cursor: pointer;
+  transition: background 0.3s;
 }
 
 .cart .profile .letter {
@@ -71,7 +72,7 @@
 .cart .profile .tooltip {
   position: absolute;
   background-color: #dedede;
-  color: var(--text-color);
+  color: var(--text);
   font-size: 11px;
   padding: 5px 10px;
   border-radius: 5px;
@@ -102,52 +103,47 @@
   margin-right: 2px;
 }
 
-ul.colors {
+ul.themes {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
   gap: 8px;
-  background: rgb(217, 217, 217);
+  background: var(--bg2);
   padding: 10px;
   border-radius: 32px;
 }
 
-.colors li {
+.themes li {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   list-style: none;
   position: relative;
   cursor: pointer;
+  transition: box-shadow 0.3s ease;
 }
 
-li[data-selected="true"] {
-  border-width: 4px;
-  border-style: solid;
-  border-color: rgb(182, 36, 255);
-}
-
-.colors li:first-child {
+.themes li:first-child {
   display: flex;
   align-items: center;
   justify-content: center;
   background: rgb(255, 255, 255);
 }
 
-.colors li:first-child svg {
+.themes li:first-child svg {
   width: 25px;
 }
 
-.colors li:first-child:hover {
+.themes li:first-child:hover {
   box-shadow: rgb(255, 255, 255) 0px 0px 12px;
 }
 
-.colors li .tooltip {
+.themes li .tooltip {
   position: absolute;
   background-color: #dedede;
-  color: var(--text-color);
+  color: var(--text);
   font-size: 11px;
   padding: 5px 8px;
   border-radius: 5px;
@@ -159,11 +155,11 @@ li[data-selected="true"] {
   z-index: 5;
 }
 
-.colors li:first-child:hover .tooltip{
+.themes li:first-child:hover .tooltip{
   opacity: 1;
 }
 
-.colors .check-icon {
+.themes .check-icon {
   position: absolute;
   display: flex;
   align-items: center;
@@ -177,16 +173,12 @@ li[data-selected="true"] {
   animation: iconAnim 0.3s ease;
 }
 
-.colors .check-icon i {
+.themes .check-icon i {
   font-size: 13px;
   color: rgb(225, 225, 225);
 }
 
-li.type1 {
-  background: linear-gradient(135deg, rgb(182, 36, 255) 50%, rgb(35, 46, 88) 50%);
-}
-
-li.type1:hover {
+li.theme1:hover {
   box-shadow: rgb(182, 36, 255) 0px 0px 12px;
 }
 
@@ -194,28 +186,30 @@ li.type1:hover {
   width: 100%;
 }
 
-.nm-input input{
+.nm-input input {
+  color: var(--text);
   width: 100%;
   padding: 16px 10px;
-  border: 1px solid #dedede;
+  border: 1px solid var(--input-brdr);
   border-radius: 15px;
   font-size: 17px;
-  background-color: rgb(245, 245, 245);
+  background-color: var(--bg);
   outline: 0;
+  transition: background-color 0.3s;
 }
 
 .nm-input input:hover {
-  border-color: #000000;
+  border-color: var(--text);
 }
 
 .nm-input input:focus {
-  border: 2px solid var(--secondary-color);
+  border: 2px solid var(--secondary);
 }
 
 .save-btn {
   border: 0;
   color: #ffffff;
-  background-color: var(--secondary-color);
+  background-color: var(--secondary);
   font-size: 17px;
   letter-spacing: 0.03em;
   font-weight: 600;
@@ -223,7 +217,7 @@ li.type1:hover {
   padding: 16px 0;
   border-radius: 15px;
   opacity: 1;
-  transition: opacity 0.3s ease;
+  transition: opacity 0.3s, background-color 0.3s;
   cursor: pointer;
 }
 
@@ -323,30 +317,30 @@ li.type1:hover {
   .register i {
     font-size: 15px;
   } 
-  ul.colors {
+  ul.themes {
     gap: 6px;
     padding: 8px;
     border-radius: 30px;
   } 
-  .colors li {
+  .themes li {
     width: 30px;
     height: 30px;
   }
-  .colors li:first-child svg {
+  .themes li:first-child svg {
     width: 19px;
   }
-  .colors li .tooltip {
+  .themes li .tooltip {
     display: none;
   }
-  .colors .check-icon {
+  .themes .check-icon {
     width: 17px;
     height: 17px;
   } 
-  .colors .check-icon i {
+  .themes .check-icon i {
     font-size: 11px;
   }
   li[data-selected="true"] {
-    border-width: 2px;
+    border-width: 2px !important;
   }
   .nm-input input{
     padding: 12px 8px;
@@ -378,23 +372,23 @@ li.type1:hover {
     padding: 45px 25px;
     border-radius: 36px;
   }
-  ul.colors {
+  ul.themes {
     gap: 5px;
     padding: 7px;
     border-radius: 28px;
   } 
-  .colors li {
+  .themes li {
     width: 30px;
     height: 30px;
   }
-  .colors li:first-child svg {
+  .themes li:first-child svg {
     width: 18px;
   }
-  .colors .check-icon {
+  .themes .check-icon {
     width: 17px;
     height: 17px;
   } 
-  .colors .check-icon i {
+  .themes .check-icon i {
     font-size: 11px;
   }
 }
@@ -406,8 +400,22 @@ li.type1:hover {
 }
 
 @media only screen and (max-width: 315px) {
-  .colors li {
+  .themes li {
     width: 28px;
     height: 28px;
+  }
+}
+
+@media only screen and (min-width: 501px) {
+  .header-container {
+    margin-top: 0;
+  }
+  #header {
+    position: absolute;
+    margin-top: 9px;
+  }
+  .cart {
+    margin: -9px auto 135px;
+    padding: 68px 48px;
   }
 }
