--- a/style/task/task.css
+++ b/style/task/task.css
@@ -27,7 +27,7 @@ td {
 }
 
 table, td, tr{
-  border-bottom: 2px solid rgba(217, 217, 217, 0.737);
+  border-bottom: 2px solid var(--secondary-min3);
   border-collapse: collapse;
   padding: 10px 0;
 }
