--- a/style/common/header.css
+++ b/style/common/header.css
@@ -41,7 +41,7 @@
   text-shadow: rgba(0, 0, 0, 0.408) 0px 0px 24px;
 }
 
-#header .user div{
+#header .user div {
   background-color: var(--bg1);
   width: 48px;
   height: 48px;
@@ -53,7 +53,19 @@
   transition: box-shadow 0.15s linear;
 }
 
-#header .user-icon {
+#header .user div img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+#header .user .letter {
+  font-size: 28px;
+  color: #fff;
+}
+
+#header i.fa-user {
   font-size: 25px;
   color: rgb(255, 255, 255);
 }
@@ -66,6 +78,7 @@
   position: absolute;
   background-color: var(--bg3);
   color: var(--text);
+  text-transform: capitalize;
   font-size: 13px;
   padding: 9px 14px;
   border-radius: 5px;
@@ -87,13 +100,15 @@
 }
 
 @media only screen and (max-width: 500px) {
-
   #header .text {
     font-size: 20px;
   }
   #header .user div {
     width: 40px;
     height: 40px;
+  }
+  #header .user .letter {
+    font-size: 24px;
   }
   #header .user i {
     font-size: 20px;
