--- a/style/common/common.css
+++ b/style/common/common.css
@@ -66,6 +66,19 @@ body {
   margin-bottom: 100px;
 }
 
+.blur-bg {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: -10px;
+  width: 100%;
+  z-index: 11;
+  filter: brightness(50%);
+  backdrop-filter: blur(6px);
+  opacity: 0;
+  transition: opacity 0.25s ease;
+}
+
 .no-select {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
