--- a/style/index.css
+++ b/style/index.css
@@ -6,4 +6,4 @@
 @import url(./common/color-picker.css);
 @import url('./common/ctgry-selector.css');
 @import url('./common/emoji-picker.css');
-@import url('./common/logout-confirm.css');
+@import url('./common/logout.css');
