--- a/style/common/sidebar.css
+++ b/style/common/sidebar.css
@@ -180,8 +180,8 @@
   justify-content: center;
   font-size: 30px;
   margin-right: 10px;
-  color: #fff;
-  background-color: #BDBDBD;
+  color: rgb(255, 255, 255);
+  background-color: var(--bg1);
   height: 40px;
   width: 40px;
   border-radius: 50%;
