--- a/style/home/home.css
+++ b/style/home/home.css
@@ -56,7 +56,7 @@
 }
 
 .user i.fa-user {
-  font-size: 25px;
+  font-size: 26px;
   color: rgb(255, 255, 255);
 }
 
@@ -65,11 +65,6 @@
   height: 100%;
   border-radius: 50%;
   object-fit: cover;
-}
-
-.user .letter {
-  font-size: 28px;
-  color: #fff;
 }
 
 .tooltip {
@@ -846,15 +841,11 @@ span.highlighted-text {
     font-size: 12px;
   }
   .user div {
-    background-color: rgb(116, 116, 116);
     width: 40px;
     height: 40px;
   }
-  i.fa-user {
-    font-size: 20px;
-  }
-  .user .letter {
-    font-size: 24px;
+  .user i.fa-user {
+    font-size: 21px;
   }
 
   .progress {
