--- a/style/profile/profile.css
+++ b/style/profile/profile.css
@@ -28,7 +28,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #ffffff;
+  color: rgb(255, 255, 255);
   cursor: pointer;
   transition: background 0.3s;
 }
