--- a/style/common/navbar.css
+++ b/style/common/navbar.css
@@ -1,7 +1,4 @@
 #navbar {
-  display: flex;
-  align-items: end;
-  justify-content: space-around;
   padding: 25px 10px 32px;
   border-radius: 24px 24px 0px 0px;
   background: var(--primary-min8);
@@ -16,10 +13,14 @@
   transition: background 0.3s;
 }
 
-#navbar button {
-  outline: 0;
-  border: 0;
-  background-color: transparent;
+#navbar ul {
+  display: flex;
+  align-items: end;
+  justify-content: space-around;
+  width: 100%;
+}
+
+#navbar li {
   cursor: pointer;
   font-size: 23px;
   display: flex;
@@ -37,7 +38,7 @@
   fill: var(--text)
 }
 
-#navbar button span {
+#navbar li span {
   font-size: 14px;
   margin-top: 4px;
   font-weight: 500;
@@ -53,7 +54,7 @@
   /* animation: 1.2s ease 0s infinite normal none running addAnim; */
 }
 
-#navbar button:after {
+#navbar li:after {
   content: '';
   display: block;
   position: absolute;
@@ -72,7 +73,7 @@
   height: 55px;
 }
 
-#navbar button:hover:after {
+#navbar li:hover:after {
   opacity: 1;
   transform: scale(1);
 }
@@ -80,11 +81,11 @@
 #navbar .add:hover {
   animation: none;
 }
-#navbar button.selected {
+#navbar li.selected {
   color: var(--secondary);
 }
 
-#navbar button.selected svg {
+#navbar li.selected svg {
   fill: var(--secondary);
 }
 
@@ -139,7 +140,7 @@
 }
 
 @media only screen and (max-width: 610px) {
-  #navbar button:hover:after {
+  #navbar li:hover:after {
     opacity: 0;
   }
 }
@@ -153,11 +154,11 @@
     width: 40px;
     height: 40px;
   }
-  #navbar button {
+  #navbar li {
     font-size: 14px;
     width: 65px;
   }
-  #navbar button span {
+  #navbar li span {
     font-size: 11px;
   }
   #navbar .transfer svg {
