--- a/style/common/common.css
+++ b/style/common/common.css
@@ -79,6 +79,16 @@ body {
   transition: opacity 0.25s ease;
 }
 
+/* Ripple effect */
+.ripple .ripple-span {
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(0);
+  animation: ripple-animation 0.4s ease-out;
+  pointer-events: none;
+}
+/* End ripple effect */
+
 .no-select {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -128,23 +138,6 @@ body {
   }
 }
 
-@keyframes addAnim {
-  0% {
-    transform: scale(0.95);
-    box-shadow: var(--secondary-min7) 0px 0px 0px 0px;
-  }
-
-  70% {
-    transform: scale(1);
-    box-shadow: var(--secondary-min0) 0px 0px 0px 14px;
-  }
-
-  100% {
-    transform: scale(0.95);
-    box-shadow: var(--secondary-min0) 0px 0px 0px 0px;
-  }
-}
-
 @keyframes opacityAnim {
   0% {
     opacity: 0;
@@ -157,6 +150,13 @@ body {
 
 @keyframes opacityAnimRvrs {
   100% {
+    opacity: 0;
+  }
+}
+
+@keyframes ripple-animation {
+  to {
+    transform: scale(2);
     opacity: 0;
   }
 }
