--- a/style/common/navbar.css
+++ b/style/common/navbar.css
@@ -1,10 +1,11 @@
 #navbar {
-  padding: 25px 10px 32px;
+  padding: 0px 10px;
   border-radius: 24px 24px 0px 0px;
   background: var(--primary-min8);
   backdrop-filter: blur(20px);
   display: none;
   position: fixed;
+  height: 95px;
   bottom: 0;
   right: 0;
   left: 0;
@@ -15,9 +16,10 @@
 
 #navbar ul {
   display: flex;
-  align-items: end;
+  align-items: center;
   justify-content: space-around;
   width: 100%;
+  height: 100%;
 }
 
 #navbar li {
@@ -28,7 +30,9 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  width: 80px;
+  width: 100%;
+  height: 65%;
+  border-radius: 15px;
   color: var(--text);
 }
 
@@ -44,43 +48,22 @@
   font-weight: 500;
 }
 
-#navbar .add {
+#navbar .add div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 25px;
   border: 2.5px solid var(--secondary);
   width: 55px;
   height: 55px;
   border-radius: 50%;
-  margin-bottom: -5px;
   /* animation: 1.2s ease 0s infinite normal none running addAnim; */
 }
 
-#navbar li:after {
-  content: '';
-  display: block;
-  position: absolute;
-  top: -3px;
-  background-color: var(--secondary-min2);
-  width: 100px;
-  height: 50px;
-  border-radius: 10px;
-  transform: scale(0);
-  transition: all 0.3s ease;
-  opacity: 0;
+#navbar .add:hover div{
+  animation: none !important;
 }
 
-#navbar .add:after {
-  top: -1px;
-  height: 55px;
-}
-
-#navbar li:hover:after {
-  opacity: 1;
-  transform: scale(1);
-}
-
-#navbar .add:hover {
-  animation: none;
-}
 #navbar li.selected {
   color: var(--secondary);
 }
@@ -110,7 +93,22 @@
   display: none; /*flex*/
 }
 
+@keyframes navAddAnim {
+  0% {
+    transform: scale(0.95);
+    box-shadow: var(--secondary-min7) 0px 0px 0px 0px;
+  }
 
+  70% {
+    transform: scale(1);
+    box-shadow: var(--secondary-min0) 0px 0px 0px 10px;
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: var(--secondary-min0) 0px 0px 0px 0px;
+  }
+}
 
 @keyframes navBarAnim {
   0% {
@@ -139,24 +137,20 @@
   }
 }
 
-@media only screen and (max-width: 610px) {
-  #navbar li:hover:after {
-    opacity: 0;
-  }
-}
-
 @media only screen and (max-width: 500px) {
   #navbar {
-    padding: 22px 0px 29px;
+    padding: 0px 5px;
+    height: 80px;
   }
-  #navbar .add {
+  #navbar .add div{
     font-size: 15px;
     width: 40px;
     height: 40px;
   }
   #navbar li {
     font-size: 14px;
-    width: 65px;
+    height: 55%;
+    border-radius: 10px;
   }
   #navbar li span {
     font-size: 11px;
