Add transition on emoji-picker background-color

--- a/style/common/emoji-picker.css
+++ b/style/common/emoji-picker.css
@@ -17,6 +17,7 @@
   border-radius: 50%;
   font-size: 50px;
   cursor: pointer;
+  transition: background-color .5s ease;
 }
 
 #emoji-picker .emoji svg {
