Fix: ripple effect

--- a/style/common/common.css
+++ b/style/common/common.css
@@ -80,7 +80,7 @@ body {
 }
 
 /* Ripple effect */
-.ripple .ripple-span {
+.ripple {
   position: absolute;
   border-radius: 50%;
   transform: scale(0);
