--- a/style/profile/profile.css
+++ b/style/profile/profile.css
@@ -9,19 +9,19 @@
   max-width: 404px;
   padding: 64px 48px;
   border-radius: 48px;
-  background: var(--bg);
+  background-color: var(--bg);
   border: 4px solid var(--secondary);
   box-shadow: var(--secondary-min8) 0px 0px 72px -1px;
   display: flex;
   row-gap: 16px;
   align-items: center;
   flex-direction: column;
-  transition: border 0.3s ease 0s, box-shadow 0.3s ease 0s, background 0.3s ease;
+  transition: border 0.3s ease 0s, box-shadow 0.3s ease 0s, background-color 0.3s ease;
 }
 
 .cart .profile {
   position: relative;
-  background: var(--bg1);
+  background-color: var(--bg1);
   width: 96px;
   height: 96px;
   border-radius: 50%;
@@ -30,12 +30,15 @@
   justify-content: center;
   color: rgb(255, 255, 255);
   cursor: pointer;
-  transition: background 0.3s;
+  transition: background-color 0.3s;
 }
 
 .cart .profile-pic {
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .cart .profile .letter {
