--- a/style/common/sidebar.css
+++ b/style/common/sidebar.css
@@ -1,5 +1,5 @@
 #sidebar {
-  width: 370px;
+  width: 330px;
   height: 100%;
   background-color: var(--bg);
   border-radius: 24px 0 0;
@@ -49,14 +49,13 @@
   flex-direction: column;
   justify-content: center;
   margin: 0px 18px 18px;
-  row-gap: 10px;
 }
 
 #sidebar li {
   list-style: none;
   color: var(--text);
   font-weight: 500;
-  padding: 18px 12px;
+  padding: 15px 12px;
   border-radius: 15px;
   display: flex;
   align-items: center;
@@ -74,7 +73,7 @@
 }
 
 #sidebar li svg {
-  width: 27px;
+  width: 25px;
   margin-right: 15px;
   margin-left: -3px;
   fill: var(--text);
@@ -127,6 +126,10 @@
   opacity: 1;
 }
 
+.sidebar-purge {
+  margin-left: -2px;
+}
+
 .sidebar-github i {
   transition: transform 0.25s ease;
 }
@@ -143,14 +146,19 @@
   transform: rotate(30deg) scale(0.9);
 }
 
+.sidebar-install svg{
+  width: 22px !important;
+}
+
 .sidebar-logout {
   color: red!important;
 }
 
 .sidebar-settings {
-  margin-bottom: 5px;
+  margin-top: 8px;
   background-color: rgb(16, 23, 39);
   color: rgb(240, 240, 240) !important;
+  padding: 17px 12px !important;
 }
 
 .sidebar-settings:hover {
@@ -209,6 +217,7 @@
 
 .sidebar-break {
   border-top: 1px solid var(--input-brdr);
+  margin: 10px 0;
 }
 
 #sidebar .creator {
@@ -249,12 +258,14 @@
   }
   #sidebar li {
     font-size: 13px;
+    padding: 12px 12px;
+    border-radius: 13px;
   }
   #sidebar .sidebar-tasks svg {
     width: 17px;
   }
   #sidebar li svg {
-    width: 20px;
+    width: 20px !important;
     margin-right: 8px;
     margin-left: 0px;
   }
