--- a/style/common/sidebar.css
+++ b/style/common/sidebar.css
@@ -28,14 +28,13 @@
 }
 
 .sidebar-header {
-  padding: 60px 0 36px;
+  padding: 26px 0;
   cursor: pointer;
 }
 
 #sidebar .app-name {
   display: flex;
   justify-content: center;
-  margin-top: -25px;
   color: var(--text);
 }
 
@@ -252,6 +251,9 @@
 @media only screen and (max-width: 500px) {
   #sidebar {
     width: 240px;
+  }
+  .sidebar-header {
+    padding: 22px 0;
   }
   #sidebar .app-name {
     font-size: 20px;
