Fix: transfer page style

--- a/style/common/common.css
+++ b/style/common/common.css
@@ -187,5 +187,8 @@ body {
   body::-webkit-scrollbar {
     width: 0px;
     background: transparent;
-  } 
+  }
+  body {
+    font-weight: 500;
+  }
 }
