--- a/style/transfer/transfer.css
+++ b/style/transfer/transfer.css
@@ -167,6 +167,13 @@ input[type="checkbox"]:checked + .custom-checkbox::before {
   fill: var(--secondary);
 }
 
+input[type="file"] {
+  position: absolute;
+  height: 0;
+  width: 0;
+  opacity: 0;
+}
+
 .import-from-clipboard {
   text-align: center;
 }
@@ -206,10 +213,10 @@ input[type="checkbox"]:checked + .custom-checkbox::before {
     margin-top: 20px;
     border-radius: 8px;
     padding: 10px 8px;
-    font-size: 10px;
+    font-size: 11px;
   }
   .export-selected svg, .export-all svg, .select-json-file svg, .import-from-clipboard svg, .import-from-link svg {
-    width: 16px;
+    width: 17px;
     margin-right: 4px;
   }    
   .import {
@@ -223,7 +230,7 @@ input[type="checkbox"]:checked + .custom-checkbox::before {
     width: 53%;
     margin-top: 25px;
     border-radius: 14px;
-    padding: 25px 50px;
+    padding: 25px 30px;
     font-size: 13px;
   }
   .drop-file svg {
